# redox

./: Cargo.toml  LICENSE  README.md  main.rx
.cargo/: config.toml
crates/redox-ast/: Cargo.toml
crates/redox-ast/src/: lib.rs  literal.rs  types.rs
crates/redox-cli/: Cargo.toml
crates/redox-cli/src/: main.rs
crates/redox-codegen/: Cargo.toml
crates/redox-codegen/src/: lib.rs  llvm.rs
crates/redox-ir-generator/: Cargo.toml
crates/redox-ir-generator/src/: lib.rs
crates/redox-ir-optimizer/: Cargo.toml
crates/redox-lexer/: Cargo.toml
crates/redox-lexer/src/: lib.rs
crates/redox-parser/: Cargo.toml
crates/redox-parser-proc/: Cargo.toml
crates/redox-parser-proc-helper/: Cargo.toml
crates/redox-parser-proc-helper/src/: lib.rs
crates/redox-parser-proc/src/: lib.rs
crates/redox-parser/src/: lib.rs
crates/redox-type-checker/: Cargo.toml
crates/redox-type-checker/src/: lib.rs
crates/rxir/: Cargo.toml
crates/rxir/src/: builder.rs  lib.rs  operand.rs  pass.rs
docs/: syntax.md
