[package]
name = "redox-parser-proc"
edition.workspace = true
version.workspace = true
authors.workspace = true

[lib]
proc-macro = true

[features]
default = ["debug"]
debug = ["syn/extra-traits"]

[dependencies]
redox-parser-proc-helper.workspace = true
redox-lexer.workspace = true
proc-macro2 = "1.0.92"
quote = "1.0.38"
syn = { version = "2.0.96", features = ["full"] }

[dev-dependencies]
pretty_assertions.workspace = true
rstest.workspace = true
